tests/neg/i13091.check
-- Error: tests/neg/i13091.scala:7:16 ----------------------------------------------------------------------------------
7 |def test = (new Foo): Unit // error: class Foo is marked @experimental ...
  |                ^^^
  |                class Foo is marked @experimental
  |
  |                Experimental definition may only be used under experimental mode:
  |                  1. in a definition marked as @experimental, or
  |                  2. an experimental feature is imported at the package level, or
  |                  3. compiling with the -experimental compiler flag.
